loaded an image as a texture, turned it into a sprite and added it to pixi stage

--- a/index.html
+++ b/index.html
@@ -16,9 +16,29 @@
             resolution: 1       // default: 1
         }
     );
+    console.log(app.renderer.view.width);
+    console.log(app.renderer.view.height);
+
+    app.renderer.autoResize = true; //resize canvas
+    app.renderer.resize(512, 512);
+
+    app.renderer.backgroundColor = 0x061639; //Set canvas background color
 
     //Add the canvas that Pixi automatically created for you to the HTML document
     document.body.appendChild(app.view);
+
+    //load an image and run the `setup` function when it's done
+    PIXI.loader
+        .add("images/cat.png")
+        .load(setup);
+
+    //This `setup` function will run when the image has loaded
+    function setup() {
+        //Create the cat sprite
+        let cat = new PIXI.Sprite(PIXI.loader.resources["images/cat.png"].texture);
+        //Add the cat to the stage
+        app.stage.addChild(cat);
+    }
 </script>
 </body>
 </html>
