--- a/index.html
+++ b/index.html
@@ -7,35 +7,36 @@
 <script src="pixi.min.js"></script>
 <body>
 <script type="text/javascript">
+    //Aliases
+    let Application = PIXI.Application,
+        loader = PIXI.loader,
+        resources = PIXI.loader.resources,
+        Sprite = PIXI.Sprite;
+
     //Create a Pixi Application
-    let app = new PIXI.Application({
-            width: 256,         // default: 800
-            height: 256,        // default: 600
-            antialias: true,    // default: false
-            transparent: false, // default: false
-            resolution: 1       // default: 1
+    let app = new Application({
+            width: 256,
+            height: 256,
+            antialias: true,
+            transparent: false,
+            resolution: 1
         }
     );
-    console.log(app.renderer.view.width);
-    console.log(app.renderer.view.height);
-
-    app.renderer.autoResize = true; //resize canvas
-    app.renderer.resize(512, 512);
-
-    app.renderer.backgroundColor = 0x061639; //Set canvas background color
 
     //Add the canvas that Pixi automatically created for you to the HTML document
     document.body.appendChild(app.view);
 
     //load an image and run the `setup` function when it's done
-    PIXI.loader
+    loader
         .add("images/cat.png")
         .load(setup);
 
     //This `setup` function will run when the image has loaded
     function setup() {
+
         //Create the cat sprite
-        let cat = new PIXI.Sprite(PIXI.loader.resources["images/cat.png"].texture);
+        let cat = new Sprite(resources["images/cat.png"].texture);
+
         //Add the cat to the stage
         app.stage.addChild(cat);
     }
