render a sprite from a tileset

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     let Application = PIXI.Application,
         loader = PIXI.loader,
         resources = PIXI.loader.resources,
-        Sprite = PIXI.Sprite;
+        Sprite = PIXI.Sprite,
+        Rectangle = PIXI.Rectangle,
+        TextureCache = PIXI.utils.TextureCache;
 
     //Create a Pixi Application
     let app = new Application({
@@ -28,12 +30,15 @@
 
     //load an image and run the `setup` function when it's done
     loader
-        .add("images/cat.png")
+        .add([
+            "images/cat.png",
+            "images/tileset.png"
+        ])
         .load(setup);
 
     //This `setup` function will run when the image has loaded
     function setup() {
-
+        //**RENDER CAT SPRITE**//
         //Create the cat sprite
         let cat = new Sprite(resources["images/cat.png"].texture);
         //Change the sprite's position
@@ -51,6 +56,31 @@
 
         //Add the cat to the stage
         app.stage.addChild(cat);
+
+        //**RENDER ROCKET SPRITE FROM A TILE SET**//
+        //Create the `tileset` sprite from the texture
+        let texture = TextureCache["images/tileset.png"];
+        //Create a rectangle object that defines the position and
+        //size of the sub-image you want to extract from the texture
+        //(`Rectangle` is an alias for `PIXI.Rectangle`)
+        let rectangle = new Rectangle(192, 128, 64, 64);
+
+        //Tell the texture to use that rectangular section
+        texture.frame = rectangle;
+
+        //Create the sprite from the texture
+        let rocket = new Sprite(texture);
+
+        //Position the rocket sprite on the canvas
+        rocket.x = 32;
+        rocket.y = 32;
+
+        //Add the rocket to the stage
+        app.stage.addChild(rocket);
+
+        //**RENDER A STAGE**//
+        //Render the stage
+        app.renderer.render(app.stage);
     }
 </script>
 </body>
