--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
     //Create a Pixi Application
     let app = new Application({
-            width: 256,
-            height: 256,
+            width: 550,
+            height: 350,
             antialias: true,
             transparent: false,
             resolution: 1
@@ -32,9 +32,14 @@
     loader
         .add([
             "images/cat.png",
-            "images/tileset.png"
+            "images/tileset.png",
+            "images/treasureHunter.json" //Each sprite on this sheet has a key/name pointing to the texture.
         ])
         .load(setup);
+
+    //Define variables that might be used in more
+    //than one function
+    let dungeon, explorer, treasure, treasureHunterids;
 
     //This `setup` function will run when the image has loaded
     function setup() {
@@ -54,8 +59,8 @@
         cat.anchor.y = 0.5; //can also set center with cat.pivot.set(32, 32)git
         cat.rotation = 0.5;
 
-        //Add the cat to the stage
-        app.stage.addChild(cat);
+        //Add the cat to the stage*
+        // app.stage.addChild(cat);
 
         //**RENDER ROCKET SPRITE FROM A TILE SET**//
         //Create the `tileset` sprite from the texture
@@ -75,8 +80,40 @@
         rocket.x = 32;
         rocket.y = 32;
 
-        //Add the rocket to the stage
-        app.stage.addChild(rocket);
+        //Add the rocket to the stage*
+        // app.stage.addChild(rocket);
+
+        //**USING A TILE SHEET**//
+        //There are 3 ways to make sprites from textures atlas frames
+
+        //1. Access the `TextureCache` directly
+        let dungeonTexture = TextureCache["dungeon.png"];
+        dungeon = new Sprite(dungeonTexture);
+        app.stage.addChild(dungeon);
+
+        //2. Access the texture using through the loader's `resources`:
+        explorer = new Sprite(
+            resources["images/treasureHunter.json"].textures["explorer.png"]
+        );
+        explorer.x = 68;
+
+        //Center the explorer vertically
+        explorer.y = app.stage.height / 2 - explorer.height / 2;
+        app.stage.addChild(explorer);
+
+        //3. Create an optional alias called `id` for all the texture atlas
+        //frame id textures.
+        treasureHunterids = PIXI.loader.resources["images/treasureHunter.json"].textures;
+
+        //Make the treasure box using the alias
+        treasure = new Sprite(treasureHunterids["treasure.png"]);
+        app.stage.addChild(treasure);
+
+        //Position the treasure next to the right edge of the canvas
+        treasure.x = app.stage.width - treasure.width - 48;
+        treasure.y = app.stage.height / 2 - treasure.height / 2;
+        app.stage.addChild(treasure);
+
 
         //**RENDER A STAGE**//
         //Render the stage
