can freely move the little man around

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     //Define variables that might be used in more
     //than one function
-    let dungeon, door, explorer, treasure, treasureHunterids;
+    let state, dungeon, door, explorer, treasure, treasureHunterids;
 
     //This `setup` function will run when the image has loaded
     function setup() {
@@ -97,6 +97,8 @@
             resources["images/treasureHunter.json"].textures["explorer.png"]
         );
         explorer.x = 68;
+        explorer.vx = 0;
+        explorer.vy = 0;
 
         //Center the explorer vertically
         explorer.y = app.stage.height / 2 - explorer.height / 2;
@@ -147,6 +149,67 @@
             //Add the blob sprite to the stage
             app.stage.addChild(blob);
         }
+
+        //**MOVEMENT OF EXPLORER**//
+        //Capture the keyboard arrow keys
+        let left = keyboard("ArrowLeft"),
+            up = keyboard("ArrowUp"),
+            right = keyboard("ArrowRight"),
+            down = keyboard("ArrowDown");
+
+        //Left arrow key `press` method
+        left.press = () => {
+            //Change the velocity when the key is pressed
+            explorer.vx = -5;
+            explorer.vy = 0;
+        };
+
+        //Left arrow key `release` method
+        left.release = () => {
+            //If the left arrow has been released, and the right arrow isn't down,
+            //and the cat isn't moving vertically:
+            //Stop the cat
+            if (!right.isDown && explorer.vy === 0) {
+                explorer.vx = 0;
+            }
+        };
+
+        //Up
+        up.press = () => {
+            explorer.vy = -5;
+            explorer.vx = 0;
+        };
+        up.release = () => {
+            if (!down.isDown && explorer.vx === 0) {
+                explorer.vy = 0;
+            }
+        };
+
+        //Right
+        right.press = () => {
+            explorer.vx = 5;
+            explorer.vy = 0;
+        };
+        right.release = () => {
+            if (!left.isDown && explorer.vy === 0) {
+                explorer.vx = 0;
+            }
+        };
+
+        //Down
+        down.press = () => {
+            explorer.vy = 5;
+            explorer.vx = 0;
+        };
+        down.release = () => {
+            if (!up.isDown && explorer.vx === 0) {
+                explorer.vy = 0;
+            }
+        };
+
+        //Set the game state
+        state = play;
+
         //Start the game loop by adding the `gameLoop` function to
         //Pixi's `ticker` and providing it with a `delta` argument.
         app.ticker.add(delta => gameLoop(delta));
@@ -162,8 +225,65 @@
 
     //called in setup towards the end app.ticker.add(delta => gameLoop(delta)); calls this function 60 times a second.
     function gameLoop(delta){
-        //Move the cat 1 pixel
-        explorer.x += .5 + delta;
+        //Update the current game state:
+        state(delta);
+    }
+
+    //moves explorer
+    function play(delta) {
+        //Apply the velocity values to the cat's
+        //position to make it move
+        //these make the character move diagonal
+        explorer.x += explorer.vx;
+        explorer.y += explorer.vy;
+    }
+
+    //**USING KEYBOARD**//
+    function keyboard(value) {
+        let key = {};
+        key.value = value;
+        key.isDown = false;
+        key.isUp = true;
+        key.press = undefined;
+        key.release = undefined;
+        //The `downHandler`
+        key.downHandler = event => {
+            if (event.key === key.value) {
+                if (key.isUp && key.press) key.press();
+                key.isDown = true;
+                key.isUp = false;
+                event.preventDefault();
+            }
+        };
+
+        //The `upHandler`
+        key.upHandler = event => {
+            if (event.key === key.value) {
+                if (key.isDown && key.release) key.release();
+                key.isDown = false;
+                key.isUp = true;
+                event.preventDefault();
+            }
+        };
+
+        //Attach event listeners
+        const downListener = key.downHandler.bind(key);
+        const upListener = key.upHandler.bind(key);
+
+        window.addEventListener(
+            "keydown", downListener, false
+        );
+        window.addEventListener(
+            "keyup", upListener, false
+        );
+
+        // Detach event listeners
+        key.unsubscribe = () => {
+            window.removeEventListener("keydown", downListener);
+            window.removeEventListener("keyup", upListener);
+        };
+
+        return key;
     }
 </script>
 </body>
