--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         resources = PIXI.loader.resources,
         Sprite = PIXI.Sprite,
         Rectangle = PIXI.Rectangle,
+        Text = PIXI.Text,
+        TextStyle = PIXI.TextStyle,
         TextureCache = PIXI.utils.TextureCache;
 
     //Create a Pixi Application
@@ -40,7 +42,7 @@
 
     //Define variables that might be used in more
     //than one function
-    let state, dungeon, door, explorer, treasure, treasureHunterids;
+    let state, message, dungeon, door, explorer, treasure, treasureHunterids;
 
     //This `setup` function will run when the image has loaded
     function setup() {
@@ -207,6 +209,22 @@
             }
         };
 
+        //some text can be added
+        let style = new TextStyle({
+            fontFamily: "Arial",
+            fontSize: 36,
+            fill: "white",
+            stroke: '#ff3300',
+            strokeThickness: 4,
+            dropShadow: true,
+            dropShadowColor: "#000000",
+            dropShadowBlur: 4,
+            dropShadowAngle: Math.PI / 6,
+            dropShadowDistance: 6,
+        });
+        message = new Text("", style);
+        app.stage.addChild(message);
+
         //Set the game state
         state = play;
 
@@ -236,6 +254,16 @@
         //these make the character move diagonal
         explorer.x += explorer.vx;
         explorer.y += explorer.vy;
+
+        if (hitTestRectangle(explorer, treasure)) {
+            //if there's a collision, change the message text
+            //and tint the box red
+            message.text = "hit!";
+            treasure.tint = 0xff3300;
+        } else {
+            message.text = "";
+            treasure.tint = 0xccff99;
+        }
     }
 
     //**USING KEYBOARD**//
@@ -285,6 +313,58 @@
 
         return key;
     }
+
+    //**HIT DETECTION**//
+    function hitTestRectangle(r1, r2) {
+
+        //Define the variables we'll need to calculate
+        let hit, combinedHalfWidths, combinedHalfHeights, vx, vy;
+
+        //hit will determine whether there's a collision
+        hit = false;
+
+        //Find the center points of each sprite
+        r1.centerX = r1.x + r1.width / 2;
+        r1.centerY = r1.y + r1.height / 2;
+        r2.centerX = r2.x + r2.width / 2;
+        r2.centerY = r2.y + r2.height / 2;
+
+        //Find the half-widths and half-heights of each sprite
+        r1.halfWidth = r1.width / 2;
+        r1.halfHeight = r1.height / 2;
+        r2.halfWidth = r2.width / 2;
+        r2.halfHeight = r2.height / 2;
+
+        //Calculate the distance vector between the sprites
+        vx = r1.centerX - r2.centerX;
+        vy = r1.centerY - r2.centerY;
+
+        //Figure out the combined half-widths and half-heights
+        combinedHalfWidths = r1.halfWidth + r2.halfWidth;
+        combinedHalfHeights = r1.halfHeight + r2.halfHeight;
+
+        //Check for a collision on the x axis
+        if (Math.abs(vx) < combinedHalfWidths) {
+
+            //A collision might be occurring. Check for a collision on the y axis
+            if (Math.abs(vy) < combinedHalfHeights) {
+
+                //There's definitely a collision happening
+                hit = true;
+            } else {
+
+                //There's no collision on the y axis
+                hit = false;
+            }
+        } else {
+
+            //There's no collision on the x axis
+            hit = false;
+        }
+
+        //`hit` will be either `true` or `false`
+        return hit;
+    };
 </script>
 </body>
 </html>
